<resources>
    <string name="app_name">Neosoft</string>
    <string name="neostore">NeoSTORE</string>
    <string name="login">login</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="createaccount">dont have an account ?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="str_please_wait">Please Wait</string>
    <string name="str_loading">Loading</string>
</resources>
