<?xml version="1.0" encoding="utf-8"?>

<!--<layout xmlns:bind="http://schemas.android.com/tools">
    <data>
        <variable name="viewmodel"
                  type="com.app.neosoft.login.viewmodel.LoginViewModel"/>

        <variable
                name="isLoading"
                type="boolean"/>

    </data>-->
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/appBackGroundColor"
            android:id="@+id/mainConstraintLayout">


        <android.support.constraint.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/guidelineLeftBegin"/>


        <android.support.constraint.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/guidelineRightEnd"/>


        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
                app:layout_constraintRight_toRightOf="@id/guidelineRight">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/neostore"
                    android:textSize="@dimen/titleheight"
                    android:textColor="@color/white"
                    android:id="@+id/textViewTitle"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="Name"
                    android:text="@={viewmodel.editTextName}"
                    android:textColorHint="@color/white"
                    android:ems="10"
                    android:id="@+id/editTextName"
                    android:layout_marginTop="@dimen/fifty"
                    android:textSize="@dimen/eighteen"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewTitle"/>


            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="Password"
                    android:text="@={viewmodel.editTextPassword}"
                    android:textColorHint="@color/white"
                    android:ems="10"
                    android:id="@+id/editTextPassword"
                    android:textSize="@dimen/eighteen"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextName"/>

            <Button
                    android:text="@string/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonLogin"
                    android:background="@color/white"
                    android:textColor="@color/red"
                    android:textSize="@dimen/twentysix"
                    android:layout_marginTop="@dimen/thirtythree"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextPassword"
                    android:onClick="@{()->viewmodel.login()}" />

            <!--
                    bind:validation="@{viewmodel.validation}"-->



            <TextView
                    android:text="@string/forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/thirtythree"
                    android:textColor="@color/white"
                    android:id="@+id/textViewForgetPassword"
                    android:textStyle="bold"
                    android:textSize="@dimen/eighteen"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/buttonLogin"/>

        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.Guideline
                android:id="@+id/guidelineBottomLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/guidelineBottomLeftBegin"/>


        <android.support.constraint.Guideline
                android:id="@+id/guidelineBottomRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/guidelineBottomRightEnd"/>

        <TextView
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/guidelineBottomLeft"
                app:layout_constraintTop_toTopOf="@id/floatingActionButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/createaccount"
                android:textAllCaps="true"
                android:textSize="@dimen/sixteen"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/sixteen"/>

        <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="@id/guidelineBottomRight"
                android:id="@+id/floatingActionButton"
                android:layout_marginBottom="@dimen/sixteen"/>

    </android.support.constraint.ConstraintLayout>
<!--
</layout>-->
