<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable name="viewmodel" type="com.app.neosoft.login.viewmodel.LoginViewModel"/>

    </data>

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/appBackGroundColor"
            android:id="@+id/mainConstraintLayout">


        <android.support.constraint.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/guidelineLeftBegin"/>


        <android.support.constraint.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/guidelineRightEnd"/>


        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
                app:layout_constraintRight_toRightOf="@id/guidelineRight">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/neostore"
                    android:textSize="@dimen/titleheight"
                    android:textColor="@color/white"
                    android:id="@+id/textViewTitle"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <!--<include
                    android:id="@+id/layoutEditTextName"
                    layout="@layout/editext_name_layout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewTitle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/fifty"
                    android:layout_marginTop="@dimen/fifty"
                    bind:nameLoginRequest="@{loginRequest}"

            />-->


            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/borderd_name_edittext"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:id="@+id/layoutEditTextName"
                    android:layout_height="@dimen/fifty"
                    android:layout_marginTop="@dimen/fifty"
                    app:layout_constraintTop_toBottomOf="@id/textViewTitle">

                <ImageView
                        android:id="@+id/imageViewEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:src="@drawable/username_icon"
                        android:layout_marginHorizontal="@dimen/sixteen"
                        android:background="@android:color/transparent"/>

                <EditText
                        android:theme="@style/CursorTheme"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:textColor="@color/white"
                        android:inputType="textPersonName"
                        android:hint="@string/username"
                        android:textColorHint="@color/white"
                        android:ems="10"
                        android:id="@+id/editTextName"
                        android:textSize="@dimen/eighteen"
                        android:textStyle="bold"
                        android:background="@android:color/transparent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/imageViewEmail"
                        android:layout_marginHorizontal="@dimen/sixteen"
                        android:text="@={viewmodel.email}"/>

            </android.support.constraint.ConstraintLayout>


            <android.support.v4.widget.Space
                    android:id="@+id/space"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/eighteen"
                    app:layout_constraintTop_toBottomOf="@id/layoutEditTextName"
                    app:layout_constraintBottom_toTopOf="@id/layoutEditTextPassword"/>


            <!--<include
                    android:id="@+id/layoutEditTextPassword"
                    layout="@layout/editext_password_layout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/space"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/fifty"/>
-->

            <android.support.constraint.ConstraintLayout
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/space"
                    android:layout_height="@dimen/fifty"
                    android:id="@+id/layoutEditTextPassword"
                    android:layout_width="match_parent"
                    android:background="@drawable/borderd_password_edittext">

                <ImageView
                        android:id="@+id/imageViewPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:src="@drawable/password_icon"
                        android:layout_marginHorizontal="@dimen/sixteen"
                        android:background="@android:color/transparent"/>

                <EditText
                        android:theme="@style/CursorTheme"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:textColor="@color/white"
                        android:inputType="textPassword"
                        android:text="@={viewmodel.password}"
                        android:hint="@string/password"
                        android:textColorHint="@color/white"
                        android:ems="10"
                        android:id="@+id/editTextPassword"
                        android:textSize="@dimen/eighteen"
                        android:textStyle="bold"
                        android:background="@android:color/transparent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/imageViewPassword"
                        android:layout_marginHorizontal="@dimen/sixteen"/>

            </android.support.constraint.ConstraintLayout>


            <Button
                    android:theme="@style/CursorTheme"
                    android:text="@string/login"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonLogin"
                    android:textColor="@color/red"
                    android:textSize="@dimen/twentysix"
                    android:layout_marginTop="@dimen/thirtythree"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutEditTextPassword"
                    android:onClick="@{()->viewmodel.login()}"
                    bind:message="@{viewmodel.message}"
                    />

            <TextView
                    android:text="@string/forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/thirtythree"
                    android:textColor="@color/white"
                    android:id="@+id/textViewForgetPassword"
                    android:textStyle="bold"
                    android:textSize="@dimen/eighteen"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/buttonLogin"/>

        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.Guideline
                android:id="@+id/guidelineBottomLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/guidelineBottomLeftBegin"/>


        <android.support.constraint.Guideline
                android:id="@+id/guidelineBottomRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/guidelineBottomRightEnd"/>

        <TextView
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/guidelineBottomLeft"
                app:layout_constraintTop_toTopOf="@id/floatingActionButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/createaccount"
                android:textAllCaps="true"
                android:textSize="@dimen/sixteen"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/sixteen"/>

        <ImageView
                android:background="@color/colorAccent"
                android:src="@drawable/ic_add"
                android:layout_width="@dimen/fourty_six"
                android:layout_height="@dimen/fourty_six"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="@id/guidelineBottomRight"
                android:id="@+id/floatingActionButton"
                android:layout_marginBottom="@dimen/sixteen"
                />

    </android.support.constraint.ConstraintLayout>

</layout>
